started to set up search ingreadients

--- a/dinners/dinners/Pages/Index.razor
+++ b/dinners/dinners/Pages/Index.razor
@@ -4,111 +4,99 @@
 
 <div class="container">
 
-    <div class="row bg-light">
-        <table class="table table-bordered">
-            <thead class="thead-dark">
-                <tr>
-                    <th>Recipe ID</th>
-                    <th>Title</th>
-                    <th>Servings</th>
-                    <th>Delete Recipe</th>
-                </tr>
-            </thead>
-            <tbody>
-                @if (Recipes.Any())
-                {
-                    @foreach (var recipe in Recipes)
-                    {
-                        <tr @onclick="(() => SetRecipesForUpdate(recipe))">
-                            <td>@recipe.Id</td>
-                            <td>@recipe.Title</td>
-                            <td>@recipe.Servings</td>
-                            <td><button class="btn btn-danger" @onclick="(() => DeleteRecipes(recipe))">Delete</button></td>
-                        </tr>
-                    }
-                }
-                else
-                {
-                    <tr><td colspan="6"><strong>No recipes available</strong></td></tr>
-                }
-            </tbody>
-        </table>
-    </div>
-
     <div class="row m-5">
-        <div class="col-5 bg-light m-2 justify-content-start">
+        <div class="row bg-light">
+            <table class="table table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>what ingredient do you want to use up?</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Ingredients.Any())
+                    {
+                        <EditForm Model="@SearchIngredients">
+                            <div class="form-group">
+                                <label for="title">Recipe Title</label>
+                                <input type="text" id="title" class="form-control" @bind-value="@SearchIngredients.Name" />
+                            </div>
 
-            <div class="p-3 mb-3 bg-primary text-white text-center">Add New Recipe</div>
+                            <!-- would rather on type --> 
+                            <div class="text-center p-3 mb-3">
+                                <button class="btn btn-info" @onclick="DoSearch"> search</button>
+                            </div>
+                        </EditForm>
 
-            <EditForm Model="@NewRecipes">
-                <div class="form-group">
-                    <label for="title">Recipe Title</label>
-                    <input type="text" id="title" class="form-control" @bind-value="@NewRecipes.Title" />
-                </div>
-
-                <div class="form-group">
-                    <label for="serving">serving</label>
-                    <input type="number" id="serving" class="form-control" @bind="@NewRecipes.Servings" />
-                </div>
-
-                <div class="form-group">
-                    <label for="servngunit">servingunit</label>
-                    <input type="text" id="serving unit" class="form-control" @bind="@NewRecipes.ServingsUnit" />
-                </div>
-
-
-                <div class="text-center p-3 mb-3">
-                    <button class="btn btn-info" @onclick="AddNewRecipes"> Add Recipe</button>
-                </div>
-            </EditForm>
+                        ///@foreach (var ingredient in Ingredients)
+                        ///{
+                        ///    <tr @onclick="(() => SetIngredientsForUpdate(ingredient))">
+                        ///        <td>@ingredient.Name</td>
+                        ///    </tr>
+                        ///}
+                    }
+                    else
+                    {
+                        <tr><td colspan="6"><strong>No ingredients available</strong></td></tr>
+                    }
+                </tbody>
+            </table>
         </div>
 
-        <div class="col-5 bg-light m-2 justify-content-end">
-            <div class="p-3 mb-1 bg-primary text-white text-center">Update Recipe</div>
-
-            <EditForm Model="@UpdateRecipes">
-                <div class="form-group">
-                    <label for="title">Recipe Title</label>
-                    <input type="text" id="title" class="form-control" @bind-value="@NewRecipes.Title" />
-                </div>
-
-                <div class="form-group">
-                    <label for="serving">serving</label>
-                    <input type="number" id="serving" class="form-control" @bind="@NewRecipes.Servings" />
-                </div>
-
-                <div class="form-group">
-                    <label for="servngunit">servingunit</label>
-                    <input type="text" id="serving unit" class="form-control" @bind="@NewRecipes.ServingsUnit" />
-                </div>
-
-                <div class="text-center p-3 mb-3">
-                    <button class="btn btn-info" @onclick="UpdateRecipesData"> Update Recipe</button>
-                </div>
-            </EditForm>
+        <!--this should be hidden until ingredient serch has been clicked-->
+        <div class="row bg-light">
+            <table class="table table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Title</th>
+                        <th>Servings</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Recipes.Any())
+                    {
+                        @foreach (var recipe in Recipes)
+                        {
+                            <tr @onclick="(() => SetRecipesForUpdate(recipe))">
+                                <td>@recipe.Title</td>
+                                <td>@recipe.Servings</td>
+                            </tr>
+                        }
+                    }
+                    else
+                    {
+                        <tr><td colspan="6"><strong>No recipes available</strong></td></tr>
+                    }
+                </tbody>
+            </table>
         </div>
+
     </div>
 </div>
 
 @code {
 
-    List<Recipes> Recipes = new List<Recipes>();
+    List<Ingredients> Ingredients = new List<Ingredients>();
     protected override async Task OnInitializedAsync()
     {
-        await RefreshRecipes();
+        await RefreshIngredients();
     }
+
+    private async Task RefreshIngredients()
+    {
+        Ingredients = await service.GetIngredientsAsync();
+    }
+
+    Ingredients UpdateIngredients = new Ingredients();
+    private void SetIngredientsForUpdate(Ingredients ingredients)
+    {
+        UpdateIngredients = ingredients;
+    }
+
+    List<Recipes> Recipes = new List<Recipes>();
 
     private async Task RefreshRecipes()
     {
         Recipes = await service.GetRecipesAsync();
-    }
-
-    public Recipes NewRecipes { get; set; } = new Recipes();
-    private async Task AddNewRecipes()
-    {
-        await service.AddRecipesAsync(NewRecipes);
-        NewRecipes = new Recipes();
-        await RefreshRecipes();
     }
 
     Recipes UpdateRecipes = new Recipes();
@@ -123,9 +111,5 @@
         await RefreshRecipes();
     }
 
-    private async Task DeleteRecipes(Recipes recipes)
-    {
-        await service.DeleteRecipesAsync(recipes);
-        await RefreshRecipes();
-    }
+
 }
