--- a/dinners/dinners/Shared/NavMenu.razor
+++ b/dinners/dinners/Shared/NavMenu.razor
@@ -13,6 +13,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="recipes">
+                <span class="oi oi-plus" aria-hidden="true"></span> Recipes
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
